# injectable

./: .gitignore  .pre-commit-config.yaml  .tarpaulin.toml  .yamllint.yaml  Cargo.toml  LICENSE  README.md  justfile
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yaml  nightly.yaml  release.yaml  security.yaml
guides/: 01-getting-started.md  02-field-injection.md  03-constructor-injection.md  04-external-types.md  05-lifecycle-hooks.md  06-inject-wrapper.md  07-axum-basics.md  08-axum-custom-state.md  09-axum-middleware.md  10-testing.md  11-config-from-env.md  12-dependency-graph.md  13-axum-realistic-app.md  14-optional-deps.md  15-large-app-organization.md  16-development-and-release.md  17-multi-service-web-app-patterns.md  3-ways-to-inject-external-types.md  README.md
injectable/: Cargo.toml
injectable-graph/: Cargo.toml
injectable-graph/src/: error.rs  graph.rs  lib.rs  node.rs  validate.rs
injectable-macros/: Cargo.toml
injectable-macros/src/: attrs.rs  container_gen.rs  container_macro.rs  derive.rs  factory_fn.rs  injectable_impl.rs  lib.rs  metadata.rs  provider_gen.rs  singleton_gen.rs
injectable-runtime/: Cargo.toml
injectable-runtime/src/: axum.rs  error.rs  extract.rs  factory_ctx.rs  inject.rs  injectable.rs  lib.rs  lifecycle.rs  provider.rs  registry.rs  resolve.rs  singleton.rs
injectable/examples/: 01_basic_field_injection.rs  02_constructor_injection.rs  03_external_types.rs  04_lifecycle_hooks.rs  05_dependency_graph.rs  06_scopes.rs  07_axum_integration.rs  08_realistic_web_app.rs  09_weather_api.rs  10_weather_users_api.rs  11_url_shortener.rs
injectable/src/: axum.rs  container.rs  lib.rs
injectable/tests/: axum_integration.rs  compile_tests.rs  integration.rs
injectable/tests/integration/: bind_macro.rs  factory_ctx.rs  generic_types.rs  mod.rs  multi_service_web_app.rs
injectable/tests/ui/: circular_dependency.rs  circular_dependency.stderr  circular_dependency_three_nodes.rs  circular_dependency_three_nodes.stderr  duplicate_registration.rs  duplicate_registration.stderr  field_arc_no_inject.rs  field_arc_no_inject.stderr  field_arc_shared.rs  field_owned.rs  field_owned_non_clone_singleton.rs  field_owned_non_clone_singleton.stderr  generic_struct_not_supported.rs  generic_struct_not_supported.stderr  lifetime_not_injectable.rs  lifetime_not_injectable.stderr  missing_constructor.rs  missing_constructor.stderr  missing_dependency.rs  missing_dependency.stderr  multiple_constructors.rs  multiple_constructors.stderr  resolve_ctx_direct_call.rs  resolve_ctx_direct_call.stderr  resolve_ctx_private.rs  scope_mismatch.rs  scope_mismatch.stderr  scope_mismatch_multiple.rs  scope_mismatch_multiple.stderr  unknown_attribute.rs  unknown_attribute.stderr  unknown_impl_attribute.rs  unknown_impl_attribute.stderr  valid_graph.rs
injectable/tests/unit/: container_methods.rs  factory_ctx.rs  generic_types.rs  mod.rs
skills/: README.md
skills/arc-vs-inject/: SKILL.md
skills/async-initialization/: SKILL.md
skills/axum-integration/: SKILL.md
skills/axum-middleware/: SKILL.md
skills/axum-realistic-app/: SKILL.md
skills/bind-macro/: SKILL.md
skills/config-injection/: SKILL.md
skills/constructor-injection/: SKILL.md
skills/container-inspection/: SKILL.md
skills/container-lifecycle/: SKILL.md
skills/container-macro/: SKILL.md
skills/dependency-graph/: SKILL.md
skills/dyn-provider/: SKILL.md
skills/error-handling/: SKILL.md
skills/external-types/: SKILL.md
skills/factory-ctx/: SKILL.md
skills/field-injection/: SKILL.md
skills/generic-injection/: SKILL.md
skills/getting-started/: SKILL.md
skills/inject-fn-macro/: SKILL.md
skills/inject-wrapper/: SKILL.md
skills/injectable-trait/: SKILL.md
skills/large-app-organization/: SKILL.md
skills/lifecycle-hooks/: SKILL.md
skills/multi-service-graph/: SKILL.md
skills/optional-dependencies/: SKILL.md
skills/post-construct-migrations/: SKILL.md
skills/prelude/: SKILL.md
skills/prelude-and-imports/: SKILL.md
skills/request-scoped/: SKILL.md
skills/reqwest-client/: SKILL.md
skills/resolve-context/: SKILL.md
skills/scoping/: SKILL.md
skills/shutdown-cleanup/: SKILL.md
skills/sqlx-sqlite/: SKILL.md
skills/testing-injectable/: SKILL.md
skills/troubleshooting/: SKILL.md
skills/url-shortener-example/: SKILL.md
skills/weather-api-example/: SKILL.md
src/: axum.rs  container.rs  lib.rs
tests/: axum_integration.rs  integration.rs
