[workspace]
resolver = "2"
members = [
    "injectable",
    "injectable-macros",
    "injectable-runtime",
    "injectable-graph",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jymchng/injectable"
repository = "https://github.com/jymchng/injectable"
rust-version = "1.86"

[workspace.dependencies]
# Internal crates
injectable-macros = { path = "injectable-macros" }
injectable-runtime = { path = "injectable-runtime" }
injectable-graph = { path = "injectable-graph" }

# Shared dependencies
async-trait = "^0.1.67"
axum = "^0.7.3"
futures-util = "0.3.32"
http-body-util = "0.1"
hyper = "^1.1.0"
tokio = { version = "^1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "^1.0.194", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
inventory = "0.3.24"
tower = { version = "^0.5.0", features = ["util"] }
trybuild = "^1.0.100"
