[package]
name = "injectable-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Proc macros for the injectable DI framework"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^2.0.87", features = ["full", "visit", "visit-mut", "parsing", "extra-traits"] }
quote = "^1.0.35"
proc-macro2 = "^1.0.83"
