[package]
name = "injectable-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Runtime types and traits for the injectable DI framework"

[features]
axum = ["dep:axum"]

[dependencies]
async-trait.workspace = true
axum = { workspace = true, optional = true }
inventory.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
