[package]
name = "injectable"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "A compile-time dependency injection framework for Rust using extractor-based DI"

[features]
axum = ["injectable-runtime/axum", "dep:axum"]

[dependencies]
injectable-graph.workspace = true
async-trait.workspace = true
axum = { workspace = true, optional = true }
futures-util.workspace = true
inventory.workspace = true
injectable-macros.workspace = true
injectable-runtime.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
axum.workspace = true
http-body-util.workspace = true
hyper.workspace = true
reqwest.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["full"] }
tower.workspace = true
trybuild.workspace = true

[[test]]
name = "axum_integration"
required-features = ["axum"]

# ─── Structured test suites ──────────────────────────────────────────
[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

# ─── Examples ────────────────────────────────────────────────────────
# Run standalone examples:
#   cargo run --example 01_basic_field_injection
#   cargo run --example 02_constructor_injection
#   cargo run --example 03_external_types
#   cargo run --example 04_lifecycle_hooks
#   cargo run --example 05_dependency_graph
#   cargo run --example 06_scopes
#
# Run Axum example (requires --features axum):
#   cargo run --example 07_axum_integration --features axum

[[example]]
name = "01_basic_field_injection"

[[example]]
name = "02_constructor_injection"

[[example]]
name = "03_external_types"

[[example]]
name = "04_lifecycle_hooks"

[[example]]
name = "05_dependency_graph"

[[example]]
name = "06_scopes"

[[example]]
name = "07_axum_integration"
required-features = ["axum"]

[[example]]
name = "08_realistic_web_app"
required-features = ["axum"]

[[example]]
name = "09_weather_api"
required-features = ["axum"]

[[example]]
name = "10_weather_users_api"
required-features = ["axum"]

[[example]]
name = "11_url_shortener"
required-features = ["axum"]
